{
    "name": "InputCharacter",
    "maps": [
        {
            "name": "actionMovimiento",
            "id": "8d018ef1-8b4b-4fcd-ba10-f138cc743d81",
            "actions": [
                {
                    "name": "Moverse",
                    "type": "Value",
                    "id": "34507680-993b-4dba-ab47-9b4d3350858f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Correr",
                    "type": "Button",
                    "id": "3846c8c3-653d-469d-8bf2-b0339319ba4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db3ca688-99b4-4766-94d6-8126736d58d9",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "420cfda5-9c63-48ff-88fb-4a84cddfcebc",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Correr",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}